--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,3 +8,6 @@ phases:
   build:
     commands:
       - echo 'Making data files'
+      - cat ${sshkey} > ~/.ssh/sshkey.pem
+      - chmod 400 ~/.ssh/sshkey.pem
+      - ssh -i  ~/.ssh/sshkey.pem ec2-user@ec2-3-83-230-91.compute-1.amazonaws.com 'uptime'
