--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,4 +10,5 @@ phases:
       - echo 'Making data files'
       - echo ${sshkey} > ~/.ssh/sshkey.pem
       - chmod 400 ~/.ssh/sshkey.pem
+      - ssh-keyscan -H ec2-3-83-230-91.compute-1.amazonaws.com >> ~/.ssh/known_hosts
       - ssh -i  ~/.ssh/sshkey.pem ec2-user@ec2-3-83-230-91.compute-1.amazonaws.com 'uptime'
