--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,5 +10,6 @@ phases:
       - echo 'Making data files'
       - echo ${sshkey} > ~/.ssh/sshkey.pem
       - chmod 400 ~/.ssh/sshkey.pem
+      - touch ~/.ssh/known_hosts
       - ssh-keyscan -H ec2-3-83-230-91.compute-1.amazonaws.com >> ~/.ssh/known_hosts
       - scp -i  ~/.ssh/sshkey.pem ./test.txt ec2-user@ec2-3-83-230-91.compute-1.amazonaws.com:/home/ec2-user/.local/lib/python2.7/site-packages/airflow/example_dags/
